--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.2.6",
     "tailwindcss": "^2.0.3",
     "vue": "^2.6.11",
+    "vue-meta": "^2.4.0",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
