add pwa package

--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "rebuildCss": "tailwind build style.css -o css/style.css",
-    "build:css": "NODE_ENV=production tailwind build style.css -o css/style.css"
+    "build:css": "NODE_ENV=production tailwind build style.css -o css/style.css",
+    "rebuildCss": "tailwind build style.css -o css/style.css"
   },
   "dependencies": {
     "autoprefixer": "^10.2.4",
     "core-js": "^3.6.5",
     "postcss": "^8.2.6",
+    "register-service-worker": "^1.7.1",
     "tailwindcss": "^2.0.3",
     "vue": "^2.6.11",
     "vue-meta": "^2.4.0",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
